my first website for experiment, silon

--- a/index.html
+++ b/index.html
@@ -316,10 +316,56 @@
           <!-- Popular Products Slideshow Ends -->
 
 
-          
+        <div class="custommer-support-container">
+            <div class="custommer-support-item money-back-box">
+                <span class="money-back icon"><img src="img/sack.svg"></span>
+                <p class="title">Money Back Guarantee</p>
+                <p class="description">Call us on issue</p>
+            </div>
+            <div class="custommer-support-item delivery-box">
+                <span class="delivery icon"><img src="img/truck.svg"></span>
+                <p class="title">Free Delivery</p>
+                <p class="description">Home delivery commitment</p>
+            </div>
+            <div class="custommer-support-item">
+                <span class="support icon"><img src="img/support.svg"></span>
+                <p class="title">Always Support</p>
+                <p class="description">24/7 Customer care</p>
+            </div>
+            <div class="custommer-support-item">
+                <span class="payment icon"><img src="img/buy.svg"></span>
+                <p class="title">Secure Payment</p>
+                <p class="description">Advanced secured transaction</p>
+            </div>
+        </div>
+
+        <!-- SUPPORTS END -->
+
+        <div class="trending-product-container">
+            <div class="trending-product-row">
+                <div class="trending-product-item">
+                    <div class="trending-product-imageRack"></div>
+                    <p class="title">Pink Women Purses</p>
+                </div>
+            </div>
+        </div>
 
 
+
+
+
+
+
+
+        <footer>
+            <!-- Icons made by flaticon.com -->
+            <div>Icons made by <a href="https://www.flaticon.com/authors/those-icons" title="Those Icons">Those Icons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+            <div>Icons made by <a href="https://www.flaticon.com/authors/dinosoftlabs" title="DinosoftLabs">DinosoftLabs</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+            <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></div>
+        </footer>
         
+
+
 
 
         <!-- Optional JavaScript -->
