my first website for experiment, silon

--- a/index.html
+++ b/index.html
@@ -327,6 +327,7 @@
                 <p class="title">Free Delivery</p>
                 <p class="description">Home delivery commitment</p>
             </div>
+            <div class="break"></div>
             <div class="custommer-support-item">
                 <span class="support icon"><img src="img/support.svg"></span>
                 <p class="title">Always Support</p>
@@ -335,7 +336,7 @@
             <div class="custommer-support-item">
                 <span class="payment icon"><img src="img/buy.svg"></span>
                 <p class="title">Secure Payment</p>
-                <p class="description">Advanced secured transaction</p>
+                <p class="description">secured transaction</p>
             </div>
         </div>
 
