my first website for experiment, silon

--- a/index.html
+++ b/index.html
@@ -319,23 +319,23 @@
         <div class="custommer-support-container">
             <div class="custommer-support-item money-back-box">
                 <span class="money-back icon"><img src="img/sack.svg"></span>
-                <p class="title">Money Back Guarantee</p>
+                <p class="support-title">Money Back Guarantee</p>
                 <p class="description">Call us on issue</p>
             </div>
             <div class="custommer-support-item delivery-box">
                 <span class="delivery icon"><img src="img/truck.svg"></span>
-                <p class="title">Free Delivery</p>
+                <p class="support-title">Free Delivery</p>
                 <p class="description">Home delivery commitment</p>
             </div>
             <div class="break"></div>
             <div class="custommer-support-item">
                 <span class="support icon"><img src="img/support.svg"></span>
-                <p class="title">Always Support</p>
+                <p class="support-title">Always Support</p>
                 <p class="description">24/7 Customer care</p>
             </div>
             <div class="custommer-support-item">
                 <span class="payment icon"><img src="img/buy.svg"></span>
-                <p class="title">Secure Payment</p>
+                <p class="support-title">Secure Payment</p>
                 <p class="description">secured transaction</p>
             </div>
         </div>
@@ -343,26 +343,138 @@
         <!-- SUPPORTS END -->
 
         <div class="trending-product-container">
-            <div class="trending-product-row">
+            <p class="title">TRENDING PRODUCTS</p>
+            <div class="trending-product-container-flex">
+                <div class="trending-product-break"></div>
                 <div class="trending-product-item">
-                    <div class="trending-product-imageRack"></div>
-                    <p class="title">Pink Women Purses</p>
+                    <div class="trending-product-imageRack trending-image-1"></div>
+                    <p class="image-label">Pink Women Purses</p>
+                    <div class="rating">
+                        <span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span>
+                    </div>
+                    <p class="price-tag">$25.50</p>
+                </div>
+                <div class="trending-product-item">
+                    <div class="trending-product-imageRack trending-image-2"></div>
+                    <p class="image-label">Pink Women Purses</p>
+                    <div class="rating">
+                        <span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span>
+                    </div>
+                    <p class="price-tag">$25.50</p>
+                </div>
+                <div class="trending-product-item">
+                    <div class="trending-product-imageRack trending-image-3"></div>
+                    <p class="image-label">Pink Women Purses</p>
+                    <div class="rating">
+                        <span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span>
+                    </div>
+                    <p class="price-tag">$25.50</p>
+                </div>
+                <div class="trending-product-item">
+                    <div class="trending-product-imageRack trending-image-4"></div>
+                    <p class="image-label">Pink Women Purses</p>
+                    <div class="rating">
+                        <span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span>
+                    </div>
+                    <p class="price-tag">$25.50</p>
+                </div>
+            </div>
+
+            <div class="trending-product-container-flex">
+                <div class="trending-product-break"></div>
+                <div class="trending-product-item">
+                    <div class="trending-product-imageRack trending-image-5"></div>
+                    <p class="image-label">Pink Women Purses</p>
+                    <div class="rating">
+                        <span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span>
+                    </div>
+                    <p class="price-tag">$25.50</p>
+                </div>
+                <div class="trending-product-item">
+                    <div class="trending-product-imageRack trending-image-6"></div>
+                    <p class="image-label">Pink Women Purses</p>
+                    <div class="rating">
+                        <span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span>
+                    </div>
+                    <p class="price-tag">$25.50</p>
+                </div>
+                <div class="trending-product-item">
+                    <div class="trending-product-imageRack trending-image-7"></div>
+                    <p class="image-label">Pink Women Purses</p>
+                    <div class="rating">
+                        <span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span>
+                    </div>
+                    <p class="price-tag">$25.50</p>
+                </div>
+                <div class="trending-product-item">
+                    <div class="trending-product-imageRack trending-image-8"></div>
+                    <p class="image-label">Pink Women Purses</p>
+                    <div class="rating">
+                        <span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span>
+                    </div>
+                    <p class="price-tag">$25.50</p>
                 </div>
             </div>
         </div>
 
-
-
-
-
-
-
+        <!-- TENDERING PRODUCTS ENDS -->
 
         <footer>
+            <div class="footer-row">
+                <div class="footer-item about-us">
+                    <p class="footer-column-title">ABOUT US</p>
+                    <p class="column-list">Who we are</p>
+                    <p class="column-list">Work with us</p>
+                    <p class="column-list">Become a supplier</p>
+                    <p class="column-list">Investor relations</p>
+                    <p class="column-list">Our devices</p>
+                    <p class="column-list">Affiliate program</p>
+                </div>
+                <div class="footer-item useful-links">
+                    <p class="footer-column-title">USEFUL LINKS</p>
+                    <p class="column-list">Contact us</p>
+                    <p class="column-list">Common FAQs</p>
+                    <p class="column-list">Terms &amp; Conditions</p>
+                    <p class="column-list">Return policy</p>
+                    <p class="column-list">Cancellation</p>
+                    <p class="column-list">Track orders</p>
+                </div>
+                <div class="footer-item online-shopping">
+                    <p class="footer-column-title">ONLINE SHOPPING</p>
+                    <p class="column-list">Men shopping</p>
+                    <p class="column-list">Women shopping</p>
+                    <p class="column-list">Gift cards</p>
+                    <p class="column-list">Home $ living</p>
+                    <p class="column-list">Electronics</p>
+                    <p class="column-list">Accessories</p>
+                </div>
+                <div class="footer-item experience-app">
+                    <p class="footer-column-title">EXPERIENCE APP ON MOBILE</p>
+                    <div class="app-flex">
+                        <div class="get-it-on google">
+                            <table><tr>
+                                <td><img src="img/android.svg"> &nbsp;</td>
+                                <td>GET IT ON <br />GOOGLE PLAY</td>
+                            </tr></table>
+                        </div>
+                        <div class="get-it-on apple">
+                            <table><tr>
+                                <td><img src="img/apple.svg"> &nbsp;</td>
+                                <td>GET IT ON <br />APP STORE</td>
+                            </tr></table>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <!-- Icons made by flaticon.com -->
-            <div>Icons made by <a href="https://www.flaticon.com/authors/those-icons" title="Those Icons">Those Icons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
-            <div>Icons made by <a href="https://www.flaticon.com/authors/dinosoftlabs" title="DinosoftLabs">DinosoftLabs</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
-            <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></div>
+            <div class="contribute">
+                <div class="copyright">Copyright &copy; 2020 Zahidul Islam, All rights reserved.</div>
+                <div><span class="column-list">Icons made by</span> <a href="https://www.flaticon.com/authors/those-icons" title="Those Icons" style="color: black;">Those Icons</a> <span class="column-list">from</span> <a href="https://www.flaticon.com/" title="Flaticon" style="color: black;">www.flaticon.com</a></div>
+                <div><span class="column-list">Icons made by</span> <a href="https://www.flaticon.com/authors/dinosoftlabs" title="DinosoftLabs" style="color: black;">DinosoftLabs</a> <span class="column-list">from</span> <a href="https://www.flaticon.com/" title="Flaticon" style="color: black;">www.flaticon.com</a></div>
+                <div><span class="column-list">Icons made by</span> <a href="https://www.flaticon.com/authors/freepik" title="Freepik" style="color: black;">Freepik</a> <span class="column-list">from</span> <a href="https://www.flaticon.com/" title="Flaticon" style="color: black;"> www.flaticon.com</a></div>
+                <div><span class="column-list">Icons made by</span> <a href="https://www.flaticon.com/authors/pixel-perfect" title="Pixel perfect" style="color: black;">Pixel perfect</a> <span class="column-list">from</span> <a href="https://www.flaticon.com/" title="Flaticon" style="color: black;">www.flaticon.com</a></div>
+            </div>
+            
         </footer>
         
 
