my first website for experiment, silon

--- a/index.html
+++ b/index.html
@@ -327,7 +327,9 @@
                 <p class="support-title">Free Delivery</p>
                 <p class="description">Home delivery commitment</p>
             </div>
+
             <div class="break"></div>
+
             <div class="custommer-support-item">
                 <span class="support icon"><img src="img/support.svg"></span>
                 <p class="support-title">Always Support</p>
@@ -345,7 +347,6 @@
         <div class="trending-product-container">
             <p class="title">TRENDING PRODUCTS</p>
             <div class="trending-product-container-flex">
-                <div class="trending-product-break"></div>
                 <div class="trending-product-item">
                     <div class="trending-product-imageRack trending-image-1"></div>
                     <p class="image-label">Pink Women Purses</p>
@@ -362,6 +363,7 @@
                     </div>
                     <p class="price-tag">$25.50</p>
                 </div>
+                <div class="break"></div>
                 <div class="trending-product-item">
                     <div class="trending-product-imageRack trending-image-3"></div>
                     <p class="image-label">Pink Women Purses</p>
@@ -381,7 +383,6 @@
             </div>
 
             <div class="trending-product-container-flex">
-                <div class="trending-product-break"></div>
                 <div class="trending-product-item">
                     <div class="trending-product-imageRack trending-image-5"></div>
                     <p class="image-label">Pink Women Purses</p>
@@ -398,6 +399,7 @@
                     </div>
                     <p class="price-tag">$25.50</p>
                 </div>
+                <div class="break"></div>
                 <div class="trending-product-item">
                     <div class="trending-product-imageRack trending-image-7"></div>
                     <p class="image-label">Pink Women Purses</p>
@@ -464,11 +466,18 @@
                             </tr></table>
                         </div>
                     </div>
+                    <div class="follow-us">
+                        <p class="footer-column-title">FOLLOW US</p>
+                        <span><i class="fa fa-facebook-f"></i></span>
+                        <span><i class="fa fa-twitter"></i></span>
+                        <span><i class="fa fa-pinterest-p"></i></span>
+                        <span><i class="fa fa-instagram"></i></span>
+                    </div>
                 </div>
             </div>
             <!-- Icons made by flaticon.com -->
             <div class="contribute">
-                <div class="copyright">Copyright &copy; 2020 Zahidul Islam, All rights reserved.</div>
+                <div class="copyright">Copyright &copy; 2020 Zahidul Islam, All rights reserved. <br />E-mail: jnaislam2020@gmail.com, Mob.: +965-50954224, Sukhsabah, Fahaheel, Kuwait</div>
                 <div><span class="column-list">Icons made by</span> <a href="https://www.flaticon.com/authors/those-icons" title="Those Icons" style="color: black;">Those Icons</a> <span class="column-list">from</span> <a href="https://www.flaticon.com/" title="Flaticon" style="color: black;">www.flaticon.com</a></div>
                 <div><span class="column-list">Icons made by</span> <a href="https://www.flaticon.com/authors/dinosoftlabs" title="DinosoftLabs" style="color: black;">DinosoftLabs</a> <span class="column-list">from</span> <a href="https://www.flaticon.com/" title="Flaticon" style="color: black;">www.flaticon.com</a></div>
                 <div><span class="column-list">Icons made by</span> <a href="https://www.flaticon.com/authors/freepik" title="Freepik" style="color: black;">Freepik</a> <span class="column-list">from</span> <a href="https://www.flaticon.com/" title="Flaticon" style="color: black;"> www.flaticon.com</a></div>
